[gd_scene load_steps=16 format=3 uid="uid://x0f6skrphdbu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0nf4c"]
[ext_resource type="PackedScene" uid="uid://jqnyg6i7slnu" path="res://scenes/new_reticle.tscn" id="2_fcx2p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qrdrg"]
albedo_color = Color(1, 0.811765, 0.470588, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_53max"]
material = SubResource("StandardMaterial3D_qrdrg")
radius = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aoqcc"]
albedo_color = Color(1, 0.517647, 0.427451, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jk1b4"]
material = SubResource("StandardMaterial3D_aoqcc")
radius = 0.3
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qcobr"]
transparency = 1
albedo_color = Color(0.517647, 1, 1, 0.372549)
roughness = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_oslwi"]
material = SubResource("StandardMaterial3D_qcobr")
radius = 0.9
height = 1.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wq2mh"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereShape3D" id="SphereShape3D_jouno"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4o260"]
radius = 1.24118

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b48de"]
height = 0.457548
radius = 2.58542

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qmkms"]
transparency = 1
albedo_color = Color(1, 0.145098, 1, 0.141176)

[sub_resource type="CylinderMesh" id="CylinderMesh_3r5jl"]
material = SubResource("StandardMaterial3D_qmkms")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kewni"]
height = 0.734492
radius = 1.55111

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 5
script = ExtResource("1_0nf4c")

[node name="PlayerSkin" type="MeshInstance3D" parent="."]
unique_name_in_owner = true

[node name="DebugSpawnPoint" type="Node3D" parent="PlayerSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 5.01381)

[node name="FollowSource" type="Node3D" parent="PlayerSkin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 2)

[node name="Body" type="MeshInstance3D" parent="PlayerSkin"]
mesh = SubResource("CapsuleMesh_53max")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerSkin/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.413141, -0.430316)
mesh = SubResource("SphereMesh_jk1b4")

[node name="Helmet" type="MeshInstance3D" parent="PlayerSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.531249, 0)
mesh = SubResource("SphereMesh_oslwi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_wq2mh")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.816137, 0.577858, 0, -0.577858, 0.816137, 0, 0.562086, 0)

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraPivot"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_jouno")
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/CameraSpringArm"]
unique_name_in_owner = true

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]

[node name="Reticle" parent="." instance=ExtResource("2_fcx2p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.878482, -1.88311)

[node name="RecruitmentAreaShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_4o260")
disabled = true

[node name="WhistleCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_b48de")
disabled = true

[node name="WhistleMesh" type="MeshInstance3D" parent="WhistleCollision"]
transform = Transform3D(5, 0, 0, 0, 0.205, 0, 0, 0, 5, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_3r5jl")

[node name="InteractionArea" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_kewni")
